Fixed hero height issue on mobile viewport

--- a/src/components/(site)/hero/hero.module.css
+++ b/src/components/(site)/hero/hero.module.css
@@ -41,7 +41,7 @@
     width: 100%;
     object-fit: cover;
     object-position: 50% 60%;
-    height: calc(100% - 4rem - 5px);
+    /* height: calc(100% - 4rem - 5px); */
     max-height: calc(100vh - 4rem - 5px);
     overflow: hidden;
     display: block;
